fix: misaligned title

--- a/styles/index.css
+++ b/styles/index.css
@@ -311,7 +311,7 @@ body {
     text-align: center;
     margin: 0;
     position: relative;
-    top: 90%;
+    top: 80%;
 }
 
 .articleContent {
